deployment/aggregator-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: aggregators-service
  labels:
    app: aggregators
spec:
  selector:
    app: aggregators
  ports:
  - port: 8100
    targetPort: 8090
    protocol: TCP
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregators
  labels:
    app: aggregators
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aggregators
  template:
    metadata:
      labels:
        app: aggregators
    spec:
      containers:
      - name: aggregators-1
        image: nimit07/nagp-micro-assign-aggregator:tag1
        ports:
        - containerPort: 8090
