deployment/bestbuy-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bestbuy-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aggregators
spec:
  hosts:
  - "*"
  gateways:
  - bestbuy-gateway
  http:
  - route:
    - destination:
        host: aggregators-service
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: users
spec:
  hosts:
  - users
  gateways:
  - bestbuy-gateway
  http:
  - route:
    - destination:
        host: users-service
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: orders
spec:
  hosts:
  - orders
  gateways:
  - bestbuy-gateway
  http:
  - route:
    - destination:
        host: orders-service
